--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
     --branco-principal: #FFFFFF;
     --cinza-secundario: #C0C0C0;
-    --botao-azul: #5df716;
+    --botao-azul: #167bf7;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'inter';
 }
@@ -160,7 +160,3 @@ body {
 
     color:var(--botao-azul)
 }   
-
-.botao__assine:hover {
-    color:var(--botao-azul)
-}
